added installation doc